[package]
name = "checkers"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "On-chain Checkers game example using Cougr ECS on Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.1.0"
cougr-core = "1.0.0"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true