[package]
name = "snake"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Cougr Contributors"]
description = "Snake on-chain game example using cougr-core ECS framework"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cougr-core = "1.0.0"
soroban-sdk = "25.1.0"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
